# Normalize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
src/gui/: FileList.cpp
src/processor/: FileHandler.cpp  FileHandler.h  FilterProcessor.cpp  FilterProcessor.h  LKFSProcessor.cpp  LKFSProcessor.h  MainProcessor.cpp
src/util/: CircularArray.h  Defines.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt  CircularTest.h  FilterTest.h  LKFSTest.h  TestRunner.cc
